[package]
name = "phosphorus"
version = "0.1.0"
authors = ["emrsmsrli <emrsmsrli1@gmail.com>"]
edition = "2018"
description = "A simple raytracer engine"
readme = "README.md"
license-file = "LICENCE"
keywords = ["graphics", "raytracer", "renderer"]

[dependencies]
clap = "3.0.0-beta.1"
imgui = "0.4.0"
nalgebra = "0.21.1"
gfx = "0.18.2"
png = "0.16.4"
